fix nav-menu border truncation

--- a/styles/global.css
+++ b/styles/global.css
@@ -134,7 +134,7 @@ nav {
   display: none;
   position: fixed;
   bottom: 0;
-  width: 100%;
+  width: calc(100vw - 2px);
   height: 40vh;
   background-color: var(--color-black);
   border-radius: 12px 12px 0 0;
